Add norm by vector in render engine