@@ -1,21 +1,17 @@
 package com.meow.bebrablender.render_engine;
 
+import com.meow.bebrablender.math.MathUtils;
 import com.meow.bebrablender.math.matrices.Matrix4d;
 import com.meow.bebrablender.math.points.Point2d;
 import com.meow.bebrablender.math.vectors.Vector3d;
 import com.meow.bebrablender.model.Model;
 import com.meow.bebrablender.model.ModelContainer;
-import com.meow.bebrablender.rasterization.TriangleRasterizationWithZBuffer;
 import javafx.scene.canvas.GraphicsContext;
-import javafx.scene.image.Image;
-import javafx.scene.paint.Color;
 
-import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 
-import static com.meow.bebrablender.math.MathUtils.mulMatrix4ByVector3;
-import static com.meow.bebrablender.render_engine.GraphicConveyor.*;
+import static com.meow.bebrablender.render_engine.GraphicConveyor.vertexToPoint;
 
 public class RenderEngine {
 
@@ -36,20 +32,17 @@ public class RenderEngine {
         modelViewProjectionMatrix.mul(viewMatrix);
         modelViewProjectionMatrix.mul(projectionMatrix);
 
-        graphicsContext.setFill(Color.RED);
-        graphicsContext.fillRect(150, 150, 1000, 1000);
-
         final int nPolygons = mesh.getPolygons().size();
         for (int polygonInd = 0; polygonInd < nPolygons; ++polygonInd) {
             final int nVerticesInPolygon = mesh.getPolygons().get(polygonInd).getVertexIndices().size();
 
-            ArrayList<Point2d> resultPoints = new ArrayList<>();
+            List<Point2d> resultPoints = new ArrayList<>();
             for (int vertexInPolygonInd = 0; vertexInPolygonInd < nVerticesInPolygon; ++vertexInPolygonInd) {
                 Vector3d vertex = mesh.getVertices().get(mesh.getPolygons().get(polygonInd).getVertexIndices().get(vertexInPolygonInd));
 
-                Vector3d vertexVecmath = new Vector3d(vertex.x(), vertex.y(), vertex.z());
+                Vector3d vertexVector = new Vector3d(vertex.x(), vertex.y(), vertex.z());
 
-                Point2d resultPoint = vertexToPoint(mulMatrix4ByVector3(modelViewProjectionMatrix, vertexVecmath), width, height);
+                Point2d resultPoint = vertexToPoint(MathUtils.mulMatrix4ByVector3(modelViewProjectionMatrix, vertexVector).norm(), width, height);
                 resultPoints.add(resultPoint);
             }
 
@@ -65,9 +58,8 @@ public class RenderEngine {
                 graphicsContext.strokeLine(
                         resultPoints.get(nVerticesInPolygon - 1).getX(),
                         resultPoints.get(nVerticesInPolygon - 1).getY(),
-                        resultPoints.get(0).getX(),
-                        resultPoints.get(0).getY());
-
+                        resultPoints.getFirst().getX(),
+                        resultPoints.getFirst().getY());
         }
     }
 }
